--- a/Source/PresentationTheme.AeroLite.Win10/Themes/AeroLite.Win10.NormalColor.xaml
+++ b/Source/PresentationTheme.AeroLite.Win10/Themes/AeroLite.Win10.NormalColor.xaml
@@ -968,18 +968,9 @@
                   BorderBrush="{DynamicResource {x:Static SystemColors.WindowFrameBrushKey}}"
                   Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
                   BorderThickness="1">
-            <ScrollViewer x:Name="DropDownScrollViewer">
-              <Grid x:Name="Grid" RenderOptions.ClearTypeHint="Enabled">
-                <Canvas x:Name="Canvas"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        Height="0"
-                        Width="0">
-                  <Rectangle x:Name="OpaqueRect"
-                             Fill="{Binding Background, ElementName=DropDownBorder}"
-                             Height="{Binding ActualHeight, ElementName=DropDownBorder}"
-                             Width="{Binding ActualWidth, ElementName=DropDownBorder}"/>
-                </Canvas>
+            <ScrollViewer>
+              <Grid Background="{Binding Background, ElementName=DropDownBorder}"
+                    RenderOptions.ClearTypeHint="Enabled">
                 <ItemsPresenter x:Name="ItemsPresenter"
                                 KeyboardNavigation.DirectionalNavigation="Contained"
                                 SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
@@ -1021,10 +1012,6 @@
         </MultiTrigger.Conditions>
         <Setter Property="ScrollViewer.CanContentScroll" Value="False"/>
       </MultiTrigger>
-      <Trigger SourceName="DropDownScrollViewer" Property="ScrollViewer.CanContentScroll" Value="False">
-        <Setter TargetName="OpaqueRect" Property="Canvas.Left" Value="{Binding HorizontalOffset, ElementName=DropDownScrollViewer}"/>
-        <Setter TargetName="OpaqueRect" Property="Canvas.Top" Value="{Binding VerticalOffset, ElementName=DropDownScrollViewer}"/>
-      </Trigger>
     </ControlTemplate.Triggers>
   </ControlTemplate>
 
@@ -1043,18 +1030,9 @@
                   BorderBrush="{StaticResource ComboBox.ListBox.Border.Hot}"
                   Background="{StaticResource ComboBox.ListBox.Background.Hot}"
                   BorderThickness="1">
-            <ScrollViewer x:Name="DropDownScrollViewer">
-              <Grid x:Name="Grid" RenderOptions.ClearTypeHint="Enabled">
-                <Canvas x:Name="Canvas"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        Width="0"
-                        Height="0">
-                  <Rectangle x:Name="OpaqueRect"
-                             Fill="{Binding Background, ElementName=DropDownBorder}"
-                             Height="{Binding ActualHeight, ElementName=DropDownBorder}"
-                             Width="{Binding ActualWidth, ElementName=DropDownBorder}"/>
-                </Canvas>
+            <ScrollViewer>
+              <Grid Background="{Binding Background, ElementName=DropDownBorder}"
+                    RenderOptions.ClearTypeHint="Enabled">
                 <ItemsPresenter x:Name="ItemsPresenter"
                                 KeyboardNavigation.DirectionalNavigation="Contained"
                                 SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
@@ -1114,10 +1092,6 @@
         </MultiTrigger.Conditions>
         <Setter Property="ScrollViewer.CanContentScroll" Value="False"/>
       </MultiTrigger>
-      <Trigger Property="ScrollViewer.CanContentScroll" SourceName="DropDownScrollViewer" Value="False">
-        <Setter TargetName="OpaqueRect" Property="Canvas.Top" Value="{Binding VerticalOffset, ElementName=DropDownScrollViewer}"/>
-        <Setter TargetName="OpaqueRect" Property="Canvas.Left" Value="{Binding HorizontalOffset, ElementName=DropDownScrollViewer}"/>
-      </Trigger>
     </ControlTemplate.Triggers>
   </ControlTemplate>
 
@@ -2038,14 +2012,8 @@
                     Padding="2">
               <ScrollViewer x:Name="SubMenuScrollViewer"
                             Style="{DynamicResource {ComponentResourceKey {x:Type FrameworkElement}, MenuScrollViewer}}">
-                <Grid RenderOptions.ClearTypeHint="Enabled">
-                  <Canvas Height="0" Width="0" HorizontalAlignment="Left" VerticalAlignment="Top">
-                    <Rectangle
-                      x:Name="OpaqueRect"
-                      Height="{Binding ActualHeight, ElementName=SubMenuBorder}"
-                      Width="{Binding ActualWidth, ElementName=SubMenuBorder}"
-                      Fill="{Binding Background, ElementName=SubMenuBorder}"/>
-                  </Canvas>
+                <Grid Background="{Binding Background, ElementName=SubMenuBorder}"
+                      RenderOptions.ClearTypeHint="Enabled">
                   <Border x:Name="PopupGutter"
                           HorizontalAlignment="Left"
                           Width="28"
@@ -2116,12 +2084,6 @@
       <Trigger SourceName="PART_Popup" Property="Popup.HasDropShadow" Value="True">
         <Setter TargetName="Shdw" Property="Margin" Value="0,0,5,5"/>
         <Setter TargetName="Shdw" Property="Color" Value="#71000000"/>
-      </Trigger>
-      <Trigger SourceName="SubMenuScrollViewer" Property="ScrollViewer.CanContentScroll" Value="False">
-        <Setter TargetName="OpaqueRect" Property="Canvas.Top"
-                Value="{Binding VerticalOffset, ElementName=SubMenuScrollViewer}"/>
-        <Setter TargetName="OpaqueRect" Property="Canvas.Left"
-                Value="{Binding HorizontalOffset, ElementName=SubMenuScrollViewer}"/>
       </Trigger>
     </ControlTemplate.Triggers>
   </ControlTemplate>
@@ -2314,15 +2276,9 @@
                     BorderThickness="1"
                     Padding="2">
               <ScrollViewer x:Name="SubMenuScrollViewer"
-                          Style="{DynamicResource {ComponentResourceKey {x:Type FrameworkElement}, MenuScrollViewer}}">
-                <Grid RenderOptions.ClearTypeHint="Enabled">
-                  <Canvas Height="0" Width="0" HorizontalAlignment="Left" VerticalAlignment="Top">
-                    <Rectangle
-                      x:Name="OpaqueRect"
-                      Height="{Binding ActualHeight, ElementName=SubMenuBorder}"
-                      Width="{Binding ActualWidth, ElementName=SubMenuBorder}"
-                      Fill="{Binding Background, ElementName=SubMenuBorder}"/>
-                  </Canvas>
+                            Style="{DynamicResource {ComponentResourceKey {x:Type FrameworkElement}, MenuScrollViewer}}">
+                <Grid Background="{Binding Background, ElementName=SubMenuBorder}"
+                      RenderOptions.ClearTypeHint="Enabled">
                   <Border x:Name="PopupGutter"
                           HorizontalAlignment="Left"
                           Width="28"
@@ -2384,12 +2340,6 @@
       <Trigger SourceName="PART_Popup" Property="Popup.HasDropShadow" Value="True">
         <Setter TargetName="Shdw" Property="Margin" Value="0,0,5,5"/>
         <Setter TargetName="Shdw" Property="Color" Value="#71000000"/>
-      </Trigger>
-      <Trigger SourceName="SubMenuScrollViewer" Property="ScrollViewer.CanContentScroll" Value="False">
-        <Setter TargetName="OpaqueRect" Property="Canvas.Top"
-                Value="{Binding VerticalOffset, ElementName=SubMenuScrollViewer}"/>
-        <Setter TargetName="OpaqueRect" Property="Canvas.Left"
-                Value="{Binding HorizontalOffset, ElementName=SubMenuScrollViewer}"/>
       </Trigger>
     </ControlTemplate.Triggers>
   </ControlTemplate>
@@ -2492,14 +2442,8 @@
               <ScrollViewer x:Name="ContextMenuScrollViewer"
                             Margin="0"
                             Style="{DynamicResource {ComponentResourceKey {x:Type FrameworkElement}, MenuScrollViewer}}">
-                <Grid RenderOptions.ClearTypeHint="Enabled">
-                  <Canvas Height="0" Width="0" HorizontalAlignment="Left" VerticalAlignment="Top">
-                    <Rectangle
-                      x:Name="OpaqueRect"
-                      Height="{Binding ActualHeight, ElementName=ContextMenuBorder}"
-                      Width="{Binding ActualWidth, ElementName=ContextMenuBorder}"
-                      Fill="{Binding Background, ElementName=ContextMenuBorder}"/>
-                  </Canvas>
+                <Grid Background="{Binding Background, ElementName=ContextMenuBorder}"
+                      RenderOptions.ClearTypeHint="Enabled">
                   <Border x:Name="PopupGutter"
                           HorizontalAlignment="Left"
                           Width="28"
@@ -2519,16 +2463,6 @@
             <Trigger Property="HasDropShadow" Value="True">
               <Setter TargetName="Shdw" Property="Margin" Value="0,0,5,5"/>
               <Setter TargetName="Shdw" Property="Color" Value="#71000000"/>
-            </Trigger>
-            <Trigger SourceName="ContextMenuScrollViewer"
-                     Property="ScrollViewer.CanContentScroll"
-                     Value="False">
-              <Setter TargetName="OpaqueRect"
-                      Property="Canvas.Top"
-                      Value="{Binding VerticalOffset, ElementName=ContextMenuScrollViewer}"/>
-              <Setter TargetName="OpaqueRect"
-                      Property="Canvas.Left"
-                      Value="{Binding HorizontalOffset, ElementName=ContextMenuScrollViewer}"/>
             </Trigger>
           </ControlTemplate.Triggers>
         </ControlTemplate>
@@ -5235,14 +5169,8 @@
                         BorderBrush="{StaticResource Menu.Popup.Border}"
                         BorderThickness="1">
                   <ScrollViewer x:Name="DropDownScrollViewer">
-                    <Grid RenderOptions.ClearTypeHint="Enabled">
-                      <Canvas Width="0" Height="0" HorizontalAlignment="Left" VerticalAlignment="Top">
-                        <Rectangle
-                          x:Name="OpaqueRect"
-                          Width="{Binding ActualWidth, ElementName=DropDownBorder}"
-                          Height="{Binding ActualHeight, ElementName=DropDownBorder}"
-                          Fill="{Binding Background, ElementName=DropDownBorder}"/>
-                      </Canvas>
+                    <Grid Background="{Binding Background, ElementName=DropDownBorder}"
+                          RenderOptions.ClearTypeHint="Enabled">
                       <ItemsPresenter x:Name="ItemsPresenter"
                                       KeyboardNavigation.DirectionalNavigation="Contained"/>
                     </Grid>
@@ -5297,11 +5225,6 @@
             <Trigger Property="IsEditable" Value="True">
               <Setter Property="Padding" Value="2"/>
               <Setter Property="IsTabStop" Value="False"/>
-            </Trigger>
-            <Trigger SourceName="DropDownScrollViewer"
-                     Property="ScrollViewer.CanContentScroll" Value="False">
-              <Setter TargetName="OpaqueRect" Property="Canvas.Left" Value="{Binding HorizontalOffset, ElementName=DropDownScrollViewer}"/>
-              <Setter TargetName="OpaqueRect" Property="Canvas.Top" Value="{Binding VerticalOffset, ElementName=DropDownScrollViewer}"/>
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
               <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
@@ -5508,14 +5431,8 @@
                         Padding="2">
                   <ScrollViewer x:Name="SubMenuScrollViewer"
                                 Style="{DynamicResource {ComponentResourceKey {x:Type FrameworkElement}, MenuScrollViewer}}">
-                    <Grid RenderOptions.ClearTypeHint="Enabled">
-                      <Canvas Height="0" Width="0" HorizontalAlignment="Left" VerticalAlignment="Top">
-                        <Rectangle
-                          x:Name="OpaqueRect"
-                          Height="{Binding ActualHeight, ElementName=SubMenuBorder}"
-                          Width="{Binding ActualWidth, ElementName=SubMenuBorder}"
-                          Fill="{Binding Background, ElementName=SubMenuBorder}"/>
-                      </Canvas>
+                    <Grid Background="{Binding Background, ElementName=SubMenuBorder}"
+                          RenderOptions.ClearTypeHint="Enabled">
                       <Border x:Name="PopupGutter"
                               HorizontalAlignment="Left"
                               Width="28"
@@ -5572,12 +5489,6 @@
           <Trigger SourceName="PART_Popup" Property="Popup.HasDropShadow" Value="True">
             <Setter TargetName="Shdw" Property="Margin" Value="0,0,5,5"/>
             <Setter TargetName="Shdw" Property="Color" Value="#71000000"/>
-          </Trigger>
-          <Trigger SourceName="SubMenuScrollViewer" Property="ScrollViewer.CanContentScroll" Value="False">
-            <Setter TargetName="OpaqueRect" Property="Canvas.Top"
-                    Value="{Binding VerticalOffset, ElementName=SubMenuScrollViewer}"/>
-            <Setter TargetName="OpaqueRect" Property="Canvas.Left"
-                    Value="{Binding HorizontalOffset, ElementName=SubMenuScrollViewer}"/>
           </Trigger>
         </ControlTemplate.Triggers>
       </ControlTemplate>
