Aero: Left-align tab titles and correct paddings

--- a/Source/PresentationTheme.Aero.Win10/Themes/Aero.Win10.NormalColor.xaml
+++ b/Source/PresentationTheme.Aero.Win10/Themes/Aero.Win10.NormalColor.xaml
@@ -4200,24 +4200,25 @@
     <Setter Property="BorderBrush" Value="{StaticResource TabItem.Border.Normal}"/>
     <Setter Property="Margin" Value="0"/>
     <Setter Property="Padding" Value="5,2"/>
+    <Setter Property="MinWidth" Value="48"/>
     <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
     <Setter Property="VerticalContentAlignment" Value="Stretch"/>
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="{x:Type TabItem}">
-            <Border x:Name="Border"
-                    BorderThickness="1,1,1,0"
-                    Background="{TemplateBinding Background}"
-                    BorderBrush="{TemplateBinding BorderBrush}"
-                    Padding="{TemplateBinding Padding}">
-              <ContentPresenter x:Name="Content"
-                                ContentSource="Header"
-                                HorizontalAlignment="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"
-                                VerticalAlignment="{Binding VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"
-                                SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
-                                Focusable="False"
-                                RecognizesAccessKey="True"/>
-            </Border>
+          <Border x:Name="Border"
+                  BorderThickness="1,1,1,0"
+                  Background="{TemplateBinding Background}"
+                  BorderBrush="{TemplateBinding BorderBrush}"
+                  Padding="{TemplateBinding Padding}">
+            <ContentPresenter x:Name="Content"
+                              ContentSource="Header"
+                              HorizontalAlignment="Left"
+                              VerticalAlignment="Center"
+                              SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                              Focusable="False"
+                              RecognizesAccessKey="True"/>
+          </Border>
           <ControlTemplate.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
               <Setter TargetName="Border" Property="Background" Value="{StaticResource TabItem.Background.Hot}"/>
@@ -4231,7 +4232,7 @@
             <Trigger Property="IsSelected" Value="True">
               <Setter Property="Panel.ZIndex" Value="1"/>
               <Setter Property="Margin" Value="-2,-2,-2,-1"/>
-              <Setter Property="Padding" Value="5,0,5,3"/>
+              <Setter Property="Padding" Value="7,0,3,3"/>
               <Setter TargetName="Border" Property="Background" Value="{StaticResource TabItem.Background.Selected}"/>
               <Setter TargetName="Border" Property="BorderBrush" Value="{StaticResource TabItem.Border.Selected}"/>
             </Trigger>
